[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textstream-asr"
version = "0.1.0"
description = "Live speech-to-text streaming on Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "sounddevice",
    "mlx",
    "mlx-qwen3-asr",
    "silero-vad-lite>=0.2.1",
]

[project.scripts]
textstream = "textstream.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textstream"]
